# Construct

./: .gitattributes  .gitignore  Android.mk  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Assets/Levels/: Box2DTest.lvl  Isometric.lvl  MainMenu.lvl  Nebula.lvl  Physics.lvl  SideScroller.lvl
Assets/Shaders/: default.fs  vertex.glsl
CMake/: FindBox2D.cmake
Code/: Android.mk  CMakeLists.txt  main.cpp
Code/Common/: CMakeLists.txt  Core.h  IGame.h  IInput.h  ILog.h  IModule.h  IRenderer.h  ISystem.h  Platform.h  Utility.h
Code/Common/Math/: Math.h
Code/Common/Physics/: IPhysics.h
Code/Common/Renderer/: ICamera.h  IRenderObject.h  IRenderer.h  ITexture.h  ITextureManager.h
Code/Common/System/: IEventSystem.h  IFileManager.h  ISystem.h  ITime.h  IWindow.h  IWindowEventListener.h  IWindowManager.h
Code/Common/System/EntitySystem/: IEntity.h  IEntityBasicTypes.h  IEntityComponent.h  IEntitySystem.h
Code/Common/System/LevelSystem/: ILevelSystem.h
Code/Common/Utility/: Json.h  Utility.h
Code/Game/: Android.mk  CMakeLists.txt
Code/Game/Colossus/: CMakeLists.txt  Game.cpp  Game.h
Code/Game/Colossus/Levels/: ILevel.h  LevelController.cpp  LevelController.h
Code/Game/Colossus/Levels/Box2DTest/: Box2DComponent.cpp  Box2DComponent.h  Box2DTestLevelController.cpp  Box2DTestLevelController.h
Code/Game/Colossus/Levels/Isometric/Player/: PlayerView.cpp  PlayerView.h
Code/Game/Colossus/Levels/Isometrica/: Isometrica.cpp  Isometrica.h
Code/Game/Colossus/Levels/Isometrica/Environment/: IsometricaEnvironmentController.cpp  IsometricaEnvironmentController.h
Code/Game/Colossus/Levels/Isometrica/Player/: PlayerView.cpp  PlayerView.h
Code/Game/Colossus/Levels/MainMenu/: MainMenu.cpp  MainMenu.h  MainMenuButtonController.cpp  MainMenuButtonController.h
Code/Game/Colossus/Levels/Nebula/: EnemyShip.cpp  EnemyShip.h  Nebula.cpp  Nebula.h
Code/Game/Colossus/Levels/Nebula/Environment/: EnvironmentController.cpp  EnvironmentController.h  EnvironmentObject.cpp  EnvironmentObject.h
Code/Game/Colossus/Levels/Nebula/Player/: Missile.cpp  Missile.h  PlayerShip.cpp  PlayerShip.h  Weapon.cpp  Weapon.h
Code/Game/Colossus/Levels/Nebula/UI/: DirectionButtonController.cpp  DirectionButtonController.h
Code/Game/Colossus/Levels/Physica/: Physica.cpp  Physica.h
Code/Game/Colossus/Levels/Physics/: PhysicalizedObjectController.cpp  PhysicalizedObjectController.h  PhysicsLevelController.cpp  PhysicsLevelController.h
Code/Game/Colossus/Levels/SideScroller/: SideScrollerLevelController.cpp  SideScrollerLevelController.h  SideScrollerPlayerController.cpp  SideScrollerPlayerController.h
Code/Game/Isometrica/: CMakeLists.txt  Game.cpp  Game.h
Code/Game/Isometrica/Environment/: EnvironmentController.cpp  EnvironmentController.h
Code/Game/Isometrica/Player/: Player.cpp  Player.h
Code/Game/Nebula/: CMakeLists.txt  EnemyShip.cpp  EnemyShip.h  Game.cpp  Game.h  StdAfx.h
Code/Game/Nebula/Environment/: EnvironmentController.cpp  EnvironmentController.h  EnvironmentObject.cpp  EnvironmentObject.h
Code/Game/Nebula/Player/: Missile.cpp  Missile.h  Player.cpp  Player.h  Weapon.cpp
Code/GameTemplates/: Android.mk  CMakeLists.txt
Code/GameTemplates/LookingGlass/: CMakeLists.txt  Game.cpp  Game.h
Code/GameTemplates/LookingGlass/EntityComponents/: SpriteRendererEntityComponent.cpp  SpriteRendererEntityComponent.h  TextRendererEntityComponent.cpp  TextRendererEntityComponent.h
Code/GameTemplates/LookingGlass/Player/: Missile.cpp  Missile.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h
Code/Input/: Android.mk  CMakeLists.txt  Input.cpp  Input.h
Code/Input/SDLInput/: SDLInput.cpp  SDLInput.h
Code/Launcher/: CMakeLists.txt  Main.cpp
Code/Launcher/AndroidLauncher/: local.properties
Code/Launcher/WindowsLauncher/: CMakeLists.txt  Main.cpp
Code/Physics/: Android.mk  CMakeLists.txt  Physics.cpp
Code/Physics/B2DPhysics/: B2DPhysics.cpp  B2DPhysics.h
Code/Physics/B2DPhysics/B2DObject/: B2DObject.cpp  B2DObject.h  B2DPhysicalObject.cpp  B2DPhysicalObject.h  B2DSensorObject.cpp  B2DSensorObject.h
Code/Physics/SDLPhysics/: SDLPhysics.cpp  SDLPhysics.h
Code/Plugins/: Android.mk  CMakeLists.txt
Code/Plugins/EntityComponents/: AnimatedSpriteRendererEntityComponent.cpp  AnimatedSpriteRendererEntityComponent.h  CollisionEntityComponent.cpp  CollisionEntityComponent.h  OnSelectionListenerEntityComponent.cpp  OnSelectionListenerEntityComponent.h  SpriteRendererEntityComponent.cpp  SpriteRendererEntityComponent.h  TextRendererEntityComponent.cpp  TextRendererEntityComponent.h
Code/Plugins/EntityComponents/Physics/: Rigidbody2D.cpp  Rigidbody2D.h
Code/Plugins/UI/: UIButton.cpp  UIButton.h
Code/Renderer/: Android.mk  CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  glad.cpp
Code/Renderer/RendererObject/: Sprite.cpp  Sprite.h
Code/Renderer/SDLRenderer/: SDLCamera.cpp  SDLCamera.h  SDLRenderer.cpp  SDLRenderer.h  SDLTexture.cpp  SDLTexture.h  SDLTextureManager.cpp  SDLTextureManager.h
Code/Renderer/SDLRenderer/RendererObject/: SDLAnimatedSprite.cpp  SDLAnimatedSprite.h  SDLPolygon.cpp  SDLPolygon.h  SDLRect.cpp  SDLRect.h  SDLRendererObject.cpp  SDLRendererObject.h  SDLSprite.cpp  SDLSprite.h  SDLText.cpp  SDLText.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
Code/Renderer/TextRenderer/: TextRenderer.cpp  TextRenderer.h
Code/Renderer/Vulkan/: Vulkan.cpp  Vulkan.h
Code/Renderer/Window/: Window.cpp  Window.h
Code/System/: Android.mk  CMakeLists.txt  DllMain.cpp  FileManager.cpp  FileManager.h  Log.cpp  Log.h  StdAfx.h  System.cpp  System.h  Time.cpp  Time.h
Code/System/EntitySystem/: Entity.cpp  Entity.h  EntityComponentFactory.cpp  EntityComponentFactory.h  EntitySystem.cpp  EntitySystem.h
Code/System/EventSystem/: EventSystem.cpp  EventSystem.h
Code/System/FileSystem/: FileManager.cpp  FileManager.h  SDLFileOps.cpp  SDLFileOps.h
Code/System/LevelSystem/: LevelSystem.cpp  LevelSystem.h
Code/System/Window/: GLFWWindow.cpp  GLFWWindow.h  SDLWindow.cpp  SDLWindow.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
(+8 files in other folders)
